--- a/src/main/resources/templates/whiteboard-questions/show.html
+++ b/src/main/resources/templates/whiteboard-questions/show.html
@@ -7,7 +7,7 @@
 </head>
 <body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<div th:replace="fragments/create-modals.html :: create-modals"></div>
+<div th:replace="fragments/create-edit-modals.html :: create-edit-modals"></div>
 
 
 <div class="container profile-container">
