--- a/src/main/resources/templates/whiteboard/whiteboard.html
+++ b/src/main/resources/templates/whiteboard/whiteboard.html
@@ -29,7 +29,7 @@
 </head>
 <body onload="init()">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<div th:replace="fragments/create-modals.html :: create-modals"></div>
+<div th:replace="fragments/create-edit-modals.html :: create-edit-modals"></div>
 <h3>CodeOn Whiteboard Environment. Click "Get Question" to begin.</h3>
 <div id="button-div">
     <button class="get-question-button" id="get-question-button">Get Question</button>
