--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div sec:authorize="isAuthenticated()" th:replace="fragments/create-edit-modals.html :: create-edit-modals"></div>
 <section class="jumbotron text-center">
     <div class="container">
         <div class="d-flex h-100 text-center align-items-center ">
