--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -7,7 +7,7 @@
 </head>
 <body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<div th:replace="fragments/create-modals.html :: create-modals"></div>
+<div th:replace="fragments/create-edit-modals.html :: create-edit-modals"></div>
 <div class="container profile-container">
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
