--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-11">
                             <div th:id="'post-' + ${post.id}"></div>
-                    <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span>    </p>
+                    <p class="m-r mb-0 userprint">Posted on:<span class="userinfo" th:text="' ' + ${post.dateTime} + ' by ' + ${post.user.username}"></span></p>
                                 <h1 th:text = "${post.title}"></h1>
                                 <p th:text = "${post.body}"></p>
                     <div th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}">
