--- a/src/main/resources/templates/whiteboard-questions/show.html
+++ b/src/main/resources/templates/whiteboard-questions/show.html
@@ -90,9 +90,9 @@
                             Comment
                         </button>
                         <div th:if="${user.id == post.user.id}">
-                            <a th:href="@{|/interview-questions/edit/${post.id}|}">
-                                <button>Edit Post</button>
-                            </a>
+                            <button class="edit-modal-button" th:id="${post.postType.type} + '-' + ${post.id}" data-toggle="modal"
+                                    data-target="#whiteboard-questions-edit-modal">Edit Post
+                            </button>
                             <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post
                             </button>
                         </div>
